# retrieval-api

./: .cspell.json  .dockerignore  .gitignore  .markdownlint.json  API_REFERENCE.md  Dockerfile  README.ja.md  README.md  app.py  docker-compose.cpu.yml  docker-compose.yml  embedding_loader.py  model_loader.py  pyproject.toml  pytest.ini  requirements.txt  run.py  start.sh  test_api_example.py  test_detection.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  docker-test.yml  markdown-link-check-config.json  pr-checks.yml
docker/: Dockerfile  Dockerfile.amd  Dockerfile.flexible  docker-compose.amd.yml  docker-compose.yml  requirements-cpu.txt  requirements.amd.txt  requirements.txt
tests/: __init__.py  test_api.py  test_embedding.py  test_model_loader.py
